syntax = "proto3";

option go_package = "/services/livetests/pkg/grpc/proto";

package livetests;

service LivetestsService {
    rpc CreateLivetest(CreateLivetestRequest) returns (CreateLivetestResponse) {}
}

message Account {
    map<string, float> assets = 1;
}

message CreateLivetestRequest {
    map<string, Account> accounts = 1;
}

message CreateLivetestResponse {
    uint64 id = 1;
}
